--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -3,6 +3,10 @@ name: Sonar
 on:
   push:
     branches: [ master, main ]
+    paths-ignore:
+      - '**.md'
+      - 'Assets/**'
+      - '.github/**'
   pull_request:
     types: [opened, synchronize, reopened]
     
