--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -14,9 +14,17 @@ name: "CodeQL"
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+      - '**.md'
+      - 'Assets/**'
+      - '.github/**'
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ main ]
+    paths-ignore:
+      - '**.md'
+      - 'Assets/**'
+      - '.github/**'
   schedule:
     - cron: '42 6 * * 1'
 
