--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,8 +3,16 @@ name: .NET
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+      - '**.md'
+      - 'Assets/**'
+      - '.github/**'
   pull_request:
     branches: [ main ]
+    paths-ignore:
+      - '**.md'
+      - 'Assets/**'
+      - '.github/**'
 
 jobs:
   build:
