--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           working_directory: ~/project/App.Tests
           name: Run tests
           command: |
-            dotnet test
+            dotnet test ..\
             
 
 workflows:
