--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [ main ]
     paths-ignore:
+      - '.circleci/**'
       - '**.md'
       - 'Assets/**'
       - '.github/**'
