--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -15,6 +15,7 @@ on:
   push:
     branches: [ main ]
     paths-ignore:
+      - '.circleci/**'
       - '**.md'
       - 'Assets/**'
       - '.github/**'
